--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/bmstu-iu9/utp2020-2-shop#readme",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "chalk": "^4.1.0",
     "express": "^4.17.1"
   },
@@ -24,3 +25,4 @@
     "nodemon": "^2.0.4"
   }
 }
+
