--- a/package.json
+++ b/package.json
@@ -19,10 +19,10 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "chalk": "^4.1.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "readline-sync": "^1.4.10"
   },
   "devDependencies": {
     "nodemon": "^2.0.4"
   }
 }
-
